grammar.txt
<RESULT>  ::= <Expr>

<Expr>    ::= <MulDiv>  (("+" | "-") <MulDiv>)*
<MulDiv>  ::= <Power> (("*" | "/") <Power>)*

<Power>   ::= <Primary> ("^" <Power>)?
<Primary> ::= "(" <Expr> ")" | <Func> | <Var> | <Number>

<Func>	  ::= <ID> "(" <Expr> ")"
<Var>	  ::= <ID>

<ID>	  ::= ([a-z] | "_") ([a-z] | [0-9] | "_")*
<Number>  ::= [0-9]+

https://bnfplayground.pauliankline.com/?bnf=%3CRESULT%3E%20%20%3A%3A%3D%20%3CExpr%3E%0A%0A%3CExpr%3E%20%20%20%20%3A%3A%3D%20%3CMulDiv%3E%20%20((%22%2B%22%20%7C%20%22-%22)%20%3CMulDiv%3E)*%0A%3CMulDiv%3E%20%20%3A%3A%3D%20%3CPrimary%3E%20((%22%2B%22%20%7C%20%22-%22)%20%3CPrimary%3E)*%0A%3CPrimary%3E%20%3A%3A%3D%20%22(%22%20%3CExpr%3E%20%22)%22%20%7C%20%3CFunc%3E%20%7C%20%3CVar%3E%20%7C%20%3CNumber%3E%0A%0A%3CFunc%3E%09%20%20%3A%3A%3D%20%3CName%3E%20%22(%22%20%3CExpr%3E%20%22)%22%20%0A%3CVar%3E%09%20%20%3A%3A%3D%20%3CName%3E%20%0A%0A%3CName%3E%09%20%20%3A%3A%3D%20(%5Ba-z%5D%20%7C%20%22_%22)%20(%5Ba-z%5D%20%7C%20%5B0-9%5D%20%7C%20%22_%22)*%20%0A%3CNumber%3E%20%20%3A%3A%3D%20%5B0-9%5D%2B%0A&name=
